--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/CBT/Desktop/AdvanceSelenium/Delta/DeltaProject/jars/commons-codec-1.10.jar"/>
 	<classpathentry kind="lib" path="C:/Users/CBT/Desktop/AdvanceSelenium/Delta/DeltaProject/jars/commons-logging-1.2.jar"/>
@@ -16,5 +25,10 @@
 	<classpathentry kind="lib" path="C:/Users/CBT/Desktop/AdvanceSelenium/Delta/DeltaProject/jars/selenium-server-standalone-2.53.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/CBT/Desktop/AdvanceSelenium/Delta/DeltaProject/jars/extentreports-java-2.41.1.jar"/>
 	<classpathentry kind="lib" path="jars/freemarker-2.3.23.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
